--- a/index.html
+++ b/index.html
@@ -5,38 +5,28 @@ image: /images/title.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+<section class="hero hero-homepage">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Make a new friend today</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<p class="subtext editable">Winner of "<b>Best Documentary</b>" at the <i>Our Heritage, Our Planet Film Festival</i>, and "<b>Best Film for Environmental Action</b>" at the <i>International Social Change Film Festival</i></p>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
-	<section class="info" id="learn-more">
-		<div class="container flex">
+	<section class="info">
+		<div class="container">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
-			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<h2 class="editable">It's a revolutionary Rich City! </h2>
+				<p class="editable">Come hear the full story of the Richmond Greenway! The feature "Greenway" by documentary filmmaker Jed Lee weaves together the enriching tale of how a once abandoned and dangerous railroad line is now a beautiful stretch of walking path decorated on each side with gardens, murals, and parks. Hear from current Richmond community leaders about how this transformation was 100% fought for and by the community.</p>
 			</div>
 		</div>
 	</section>
 
 	<section class="info">
-		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
-			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+		<div class="container">
+			<div class="youtube-embed">
+				<iframe src="https://www.youtube.com/embed/10x2JoLN9rQ?si=UTGx5TqNBKKj3eTJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</section>
