--- a/index.html
+++ b/index.html
@@ -32,23 +32,30 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	</section>
 
 	<section class="info">
-		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
-			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
-			</div>
+		<div class="container flex award-flex">
+			<img class="award-img" src="/images/awards/1. Golden State Film Festival - 2023.png">
+			<img class="award-img" src="/images/awards/2. OFFICIAL SELECTION - 21st Oakland International Film Festival - 2022.png">
+			<img class="award-img" src="/images/awards/3. BEST DOCUMENTARY - Our Heritage Our Planet Film Week - 2022.png">
+			<img class="award-img" src="/images/awards/4. OFFICIAL SELECTION - Colorado Environmental Film Festival - 2023.png">
+			<img class="award-img" src="/images/awards/5. WINNER - International Social Change Film Festival - 2022.png">
+			<img class="award-img" src="/images/awards/6. OFFICIAL SELECTION - The Hollywood First-Time Filmmaker Showcase - 2022.png">
+			<img class="award-img" src="/images/awards/7. HONORABLE MENTION - Awareness Festival - 2023.png">
+			<img class="award-img" src="/images/awards/8. AWARD OF RECOGNITION VIEWER IMPACT - The Impact DOCS Awards - 2022.png">
+			<img class="award-img" src="/images/awards/9. AWARD OF RECOGNITION DOCUMENTARY FEATURE - The Impact DOCS Awards - 2022.png">
+			<img class="award-img" src="/images/awards/10. SILVER WINNER - International Independent Film Awards - 2022.png">
+			<img class="award-img" src="/images/awards/11. SILVER AWARD - Spotlight Documentary Film Awards - 2023.png">
+			<img class="award-img" src="/images/awards/12. HONORABLE MENTION - Student World Impact Film Festival - 2022.png">
 		</div>
 	</section>
 
-	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
-		<div class="inner-hero text-container">
-			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+	<section class="info">
+		<div class="container flex">
+			<div class="text">
+				<h2>About the Filmmaker</h2>
+				<p>Jed Terrence Lee 李家誠 is a activist, artist, and filmmaker of the Chinese diaspora from the Bay Area in California. Jed organizes for the Student Environmental Resource Center at UC Berkeley, their alma mater, as a Wellness and Environmental Justice Community Engagement Manager to continue pursuing environmental, climate, and development justice. Jed strongly believes that we can always look to nature to find inspiration for our interpersonal relationships, collective movements, and personal healing, and that there is always love, life and hope in this world.</p>
+			</div>
+			<div class="image">
+				<img src="/images/the_filmmaker.JPG" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
