Updated watch page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 title: Home
-description: The latest app to help you find new friends with common interests.
+description: Come hear the full story of the Richmond Greenway! The feature "Greenway" by documentary filmmaker Jed Lee weaves together the enriching tale of how a once abandoned and dangerous railroad line is now a beautiful stretch of walking path decorated on each side with gardens, murals, and parks. Hear from current Richmond community leaders about how this transformation was 100% fought for and by the community.
 image: /images/title.png
-bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
 <section class="hero hero-homepage">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<p class="subtext editable">Winner of "<b>Best Documentary</b>" at the <i>Our Heritage, Our Planet Film Festival</i>, and "<b>Best Film for Environmental Action</b>" at the <i>International Social Change Film Festival</i></p>
+			<p class="subtext">Winner of "<b>Best Documentary</b>" at the <i>Our Heritage, Our Planet Film Festival</i>, and "<b>Best Film for Environmental Action</b>" at the <i>International Social Change Film Festival</i></p>
 		</div>
 	</div>
 </section>
@@ -17,8 +16,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container">
 			<div class="text">
-				<h2 class="editable">It's a revolutionary Rich City! </h2>
-				<p class="editable">Come hear the full story of the Richmond Greenway! The feature "Greenway" by documentary filmmaker Jed Lee weaves together the enriching tale of how a once abandoned and dangerous railroad line is now a beautiful stretch of walking path decorated on each side with gardens, murals, and parks. Hear from current Richmond community leaders about how this transformation was 100% fought for and by the community.</p>
+				<h2>It's a revolutionary Rich City! </h2>
+				<p>Come hear the full story of the Richmond Greenway! The feature "Greenway" by documentary filmmaker Jed Lee weaves together the enriching tale of how a once abandoned and dangerous railroad line is now a beautiful stretch of walking path decorated on each side with gardens, murals, and parks. Hear from current Richmond community leaders about how this transformation was 100% fought for and by the community.</p>
 			</div>
 		</div>
 	</section>
