--- a/watch.html
+++ b/watch.html
@@ -1,29 +1,66 @@
 ---
 title: Watch
-description: We've built an amazing team of developers, marketers, designers and sales people.
+description: Watch the film here!
 image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Our Story</h1>
-			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<h1>Watch the Film</h1>
+			<p class="subtext">Watch the film, and find more information on screenings, educational use, and more.</p>
 		</div>
 	</div>
 </section>
 
 <section class="pad">
 	<div class="container">
-		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
-		<ul class="staff">
-			{% for person in site.staff_members %}
-				<li>
-					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
-					<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a></div>
-					<div class="position">{{ person.position }}</div>
-				</li>
-			{% endfor %}
-		</ul>
+		<div class="container">
+			<div class="text">
+				<h2>Watch the film here!</h2>
+				<p><a href="#license">Click here</a> for getting the high quality video files for academic and educational use, screenings, or other uses.</p>
+			</div>
+		</div>
+		<section>
+			<div class="container">
+				<div class="youtube-embed">
+					<iframe src="https://www.youtube.com/embed/10x2JoLN9rQ?si=UTGx5TqNBKKj3eTJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div>
+			</div>
+		</section>
+
+		<hr class="divider">
+
+		<div class="container">
+			<div class="text">
+				<h2>Directors Cut</h2>
+			</div>
+		</div>
+		<section>
+			<div class="container">
+				<div class="youtube-embed">
+					<iframe src="https://www.youtube.com/embed/10x2JoLN9rQ?si=UTGx5TqNBKKj3eTJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div>
+			</div>
+		</section>
+
+		<hr class="divider">
+
+		<div class="container" id="license">
+			<div class="text">
+				<h2>Instructions for Educational License</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			
+		</div>
+
+		<hr class="divider">
+
+		<div class="container">
+			<div class="text">
+				<h2>Organize a Screening</h2>
+				<p>If you are interested in organizing a screening or getting in touch with the filmmaker, please reach out to <a href="mailto:richmondgreenwayfilm@gmail.com">richmondgreenwayfilm@gmail.com</a>. Some example requests include getting access to the high quality video file and requesting a Q&A session.</p>
+			</div>
+		</div>
 	</div>
 </section>
