--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: Come hear the full story of the Richmond Greenway! The feature "Greenway" by documentary filmmaker Jed Lee weaves together the enriching tale of how a once abandoned and dangerous railroad line is now a beautiful stretch of walking path decorated on each side with gardens, murals, and parks. Hear from current Richmond community leaders about how this transformation was 100% fought for and by the community.
-image: /images/title.png
+image: /images/title-homepage.png
 ---
 
 <section class="hero hero-homepage">
