--- a/watch.html
+++ b/watch.html
@@ -1,10 +1,10 @@
 ---
 title: Watch
 description: Watch the film here!
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+image: /images/title-watch.jpg
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+<section class="hero" style="background-position:center; background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1>Watch the Film</h1>
