--- a/orgs.html
+++ b/orgs.html
@@ -1,7 +1,7 @@
 ---
-title: Watch
-description: We've built an amazing team of developers, marketers, designers and sales people.
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+title: Organizations
+description: Learn about the partner organizations that make up the Richmond Greenway.
+image: /images/title-orgs.jpg
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
