--- a/archive.html
+++ b/archive.html
@@ -7,8 +7,8 @@ image: /images/title-archive.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1>Our Story</h1>
-			<p class="subtext">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<h1>Interview Archive</h1>
+			<p class="subtext">Watch full length interviews of the organizations featured in the documentary.</p>
 		</div>
 	</div>
 </section>
