--- a/orgs.html
+++ b/orgs.html
@@ -7,8 +7,8 @@ image: /images/title-orgs.jpg
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1>Our Story</h1>
-			<p class="subtext">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<h1>Partner Organizations</h1>
+			<p class="subtext">Learn about the partner organizations that make up the Richmond Greenway.</p>
 		</div>
 	</div>
 </section>
