--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@ image: /images/title-archive.png
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1>Interview Archive</h1>
-			<p class="subtext">Watch full length interviews of the organizations featured in the documentary.</p>
+			<p class="subtext">Watch full length interviews of the organizations featured in the documentary.ßßß</p>
 		</div>
 	</div>
 </section>
