Updated video links; Removed unfinished paragraphs

--- a/watch.html
+++ b/watch.html
@@ -15,16 +15,16 @@ image: /images/title-watch.jpg
 
 <section class="pad">
 	<div class="container">
-		<div class="container">
+		<!--<div class="container">
 			<div class="text">
 				<h2>Watch the film here!</h2>
 				<p><a href="#license">Click here</a> for getting the high quality video files for academic and educational use, screenings, or other uses.</p>
 			</div>
-		</div>
+		</div>-->
 		<section>
 			<div class="container">
 				<div class="youtube-embed">
-					<iframe src="https://www.youtube.com/embed/10x2JoLN9rQ?si=UTGx5TqNBKKj3eTJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/S5gCVX2DfRs?si=KB_weKOCwYnWtr-r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				</div>
 			</div>
 		</section>
@@ -39,14 +39,14 @@ image: /images/title-watch.jpg
 		<section>
 			<div class="container">
 				<div class="youtube-embed">
-					<iframe src="https://www.youtube.com/embed/10x2JoLN9rQ?si=UTGx5TqNBKKj3eTJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/ry0E61787zs?si=bmQsMVC9Kll1a5Sw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				</div>
 			</div>
 		</section>
 
 		<hr class="divider">
 
-		<div class="container" id="license">
+		<!--<div class="container" id="license">
 			<div class="text">
 				<h2>Instructions for Educational License</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -54,7 +54,7 @@ image: /images/title-watch.jpg
 			
 		</div>
 
-		<hr class="divider">
+		<hr class="divider">-->
 
 		<div class="container">
 			<div class="text">
